Xóa các file không cần thiết

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
     </li>
 </ul>
 </div>
-
+<!-- 
 <div id="temp">
     <p>We are migrating!</p>
     <a href="">Access the old site here!</a>
-</div>
+</div> -->
 
 <div id="bottom-bar">
 	<a id="trigger-about">About</a>
