Xóa các file và code không cần thiết

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!--fonts-->
 <link href="fonts/silkscreen/stylesheet.css" rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href='fonts/googleapi.css' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -93,11 +93,6 @@
     </li>
 </ul>
 </div>
-<!-- 
-<div id="temp">
-    <p>We are migrating!</p>
-    <a href="">Access the old site here!</a>
-</div> -->
 
 <div id="bottom-bar">
 	<a id="trigger-about">About</a>
