--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!--fonts-->
 <link href="fonts/silkscreen/stylesheet.css" rel='stylesheet' type='text/css'>
-<link href='fonts/googleapi.css' rel='stylesheet' type='text/css'>
+<link href="fonts/googleapi.css" rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -55,21 +55,9 @@
             </div>
         </div>
     </li>
-    <li class="viz" id="bfsdfs">
-    	<div class="li-wrapper">
-            <a class="thumbnail" href="Graph/vi/dfsbfs.html">
-            	<img src="img/bfsdfs.gif">
-                <img class="static" src="img/bfsdfs.jpg">
-            </a>
-            <div class="info">
-                <h3><a href="">Graphs Traversal</a></h3>
-                <div class="indv-viz-filters"></div>
-            </div>
-        </div>
-    </li>
     <li class="viz" id="mst">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="Graph/vi/mst.html">
+            <a class="thumbnail" href="mst.html">
                 <img src="img/mst.gif">
                 <img class="static" src="img/mst.jpg">
             </a> 
@@ -81,7 +69,7 @@
     </li>
     <li class="viz" id="sssp">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="Graph/vi/sssp.html">
+            <a class="thumbnail" href="sssp.html">
                 <img src="img/sssp.gif">
                 <img class="static" src="img/sssp.jpg">
             </a>
