--- a/mst.html
+++ b/mst.html
@@ -18,12 +18,12 @@
 <script src="js/viz.js"></script>
 <script src="js/common.js"></script>
 <script src="js/actions/mst_actions.js"></script>
-<script src="//connect.facebook.net/en_US/all.js"></script>
+<!-- <script src="//connect.facebook.net/en_US/all.js"></script> -->
 <!-- more scripts are below-->
 
 <!--fonts-->
 <link href="fonts/silkscreen/stylesheet.css" rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href="fonts/googleapi.css" rel='stylesheet' type='text/css'>
 
 </head>
 
