--- a/sssp.html
+++ b/sssp.html
@@ -22,7 +22,7 @@
 
 <!--fonts-->
 <link href="fonts/silkscreen/stylesheet.css" rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href="fonts/googleapi.css" rel='stylesheet' type='text/css'>
 
 </head>
 
