Câpj nhật thêm tính năng vẽ đồ thị

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <ul id="list">
     <li class="viz" id="graphs">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="Graph/vi/graphds.html">
+            <a class="thumbnail" href="graphs.html">
             	<img src="img/graphds.gif">
                 <img class="static" src="img/graphds.jpg">
             </a>
@@ -74,7 +74,19 @@
                 <img class="static" src="img/sssp.jpg">
             </a>
             <div class="info">
-                <h3><a href="Graph/vi/sssp.html">Single-Source Shortest Paths</a></h3>
+                <h3><a href="sssp.html">Đường đi ngắn nhất</a></h3>
+                <div class="indv-viz-filters"></div>
+            </div>
+        </div>
+    </li>
+    <li class="viz" id="dfsbfs"">
+    	<div class="li-wrapper">
+            <a class="thumbnail" href="Graph/vi/dfsbfs.html">
+                <img src="img/bfsdfs.gif">
+                <img class="static" src="img/bfsdfs.gif">
+            </a>
+            <div class="info">
+                <h3><a href="dfsbfs.html">Graph</a></h3>
                 <div class="indv-viz-filters"></div>
             </div>
         </div>
