--- a/graphs.html
+++ b/graphs.html
@@ -13,19 +13,19 @@
 
   <meta name="csrf-token" content="iVivZ7KRPe6XK7pbuGtOoEjljE1xyBVNhLKNFuF8">
   <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
-  <meta property="og:image" content="../img/png/graphds.png">
+  <meta property="og:image" content="img/png/graphds.png">
   <title>VisuAlgo - Graph Data Structures (Adjacency Matrix, Adjacency List, Edge List)</title>
-  <link rel="icon" href="../img/favicon.png" type="image/x-icon">
-  <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
-  <link rel="apple-touch-icon" href="../img/favicon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../img/favicon.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../img/favicon.png">
-  <link rel="stylesheet" type="text/css" href="../fonts/silkscreen/stylesheet.css">
-  <link rel="stylesheet" type="text/css" href="../css/common.css">
-  <link rel="stylesheet" href="../css/viz-1.0.1.css">
-  <link rel="stylesheet" href="../css/visual.css">
-  <link rel="stylesheet" href="../css/drawgraph.css">
-  <link rel="stylesheet" href="../../css/graph.css">
+  <link rel="icon" href="img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="img/favicon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="fonts/silkscreen/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/common.css">
+  <link rel="stylesheet" href="css/viz.css">
+  <link rel="stylesheet" href="css/visual.css">
+  <link rel="stylesheet" href="css/drawgraph.css">
+  <link rel="stylesheet" href="css/graph.css">
 </head>
 
 <body>
@@ -151,6 +151,8 @@
     </tr>
   </table>
   <div id="actions" class="panel">
+    <p onClick="GraphVisu(true , true , 'CP3Fig2.4');">Nhập đồ thị từ file</p>
+    <p onClick="GraphVisu(true , true , 'CP3Fig2.4');">Đồ thị ngẫu nhiên</p>
     <p onClick="GraphVisu(true , true , 'CP3Fig2.4');">U/U: CP3 Fig 2.4</p>
     <p onClick="GraphVisu(true , true , 'CP3Fig2.4_disjoint');">U/U: CP3 Fig 2.4, disjoint</p>
     <p onClick="GraphVisu(true , true , 'tree');">U/U: Tree</p>
@@ -166,10 +168,9 @@
     <p onClick="GraphVisu(false, false, 'CP3Fig4.26B');">D/W: CP3 Fig 4.26B*</p>
     <p onClick="GraphVisu(false, false, 'sssp');">D/W: Four 0&rarr;4 Paths</p>
   </div>
-  <div id="actions-hide" class="panel-hide"><img src="../img/arrow_white_right.png" alt=">"
+  <div id="actions-hide" class="panel-hide"><img src="img/arrow_white_right.png" alt=">"
       title="show/hide actions panel" /></div>
-
-  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="js/external/jquery-3.3.1.min.js"></script>
   <script>
     var PHP_DOMAIN = "";
 
@@ -322,12 +323,11 @@
     });
   </script>
 
-  <script src="../js/jquery-ui.min.js"></script>
-
-  <script src="../js/d3.min.js"></script>
-  <script src="../js/viz-1.0.3.js"></script>
-  <script src="../js/visualgo_print.js"></script>
-  <script src="../js/graph_library.js"></script>
+  <script src="js/external/jquery-ui.js"></script>
+  <script src="js/external/d3.v3.js"></script>
+  <script src="js/viz.js"></script>
+  <!-- <script src="../js/visualgo_print.js"></script>
+  <script src="../js/graph_library.js"></script> -->
   <script>
     window.onpopstate = function (event) {
       var slide = event.state['slide'];
