--- a/mst.html
+++ b/mst.html
@@ -44,6 +44,8 @@
     <div id="current-action" class="panel"><p></p></div>
     
     <div id="actions" class="panel">
+        <p id="input">Nhập đồ thị từ file</p>
+        <p id="random">Đồ thị ngẫu nhiên</p>
         <p id="samples">Sample Graphs</p>
         <p id="kruskals" class="execAction" onclick=kruskals()>Kruskal's Algo</p>
         <p id="prims">Prim's Algo</p>
@@ -104,38 +106,6 @@
 <div id="about" class="overlays"></div>
 <div id="team" class="overlays"></div>
 <div id="termsofuse" class="overlays"></div>
-
-<!--tutorial dialogs here-->
-<div id="heap-tutorial-1" class="tutorial-dialog">
-  A Binary Max Heap is a <strong>complete binary tree</strong> (all levels except the last are fully filled, and the last level is filled from left to right) that maintains the <strong>heap property</strong> (each node is greater than each of its children).
-    <div class="tutorial-next">Next<img src="img/arrow_white_right.png"/></div>
-</div>
-<div id="heap-tutorial-2" class="tutorial-dialog">
-  All available operations on the Heap will be shown here. Select an action and provide the necessary input, and the action will be animated in the visualisation area.
-    <div class="tutorial-next">Next<img src="img/arrow_white_right.png"/></div>
-</div>
-<div id="heap-tutorial-3" class="tutorial-dialog">
-  View the visualisation here!
-    <div class="tutorial-next">Next<img src="img/arrow_white_right.png"/></div>
-</div>
-<div id="heap-tutorial-4" class="tutorial-dialog">
-  As the action is being carried out, each step will be described in the status panel.
-    <div class="tutorial-next">Next<img src="img/arrow_white_right.png"/></div>
-</div>
-<div id="heap-tutorial-5" class="tutorial-dialog">
-  You can also follow the psuedocode highlights to trace the algorithm.
-    <div class="tutorial-next">Next<img src="img/arrow_white_right.png"/></div>
-</div>
-<div id="heap-tutorial-6" class="tutorial-dialog">
-  Control the animation with the player controls! Keyboard shortcuts are:<br/>
-    <div style="margin-top: 8px;"><strong>Spacebar:</strong> play/pause/replay</div>
-    <strong>Left/right arrows:</strong> step backward/step forward<br/>
-    <strong>-/+:</strong> decrease/increase speed<br/>
-    <div class="tutorial-next">Next<img src="img/arrow_white_right.png"/></div>
-</div>
-<div id="heap-tutorial-7" class="tutorial-dialog">
-  Return to "Exploration Mode" to start exploring!
-</div>
 
 <script src="js/graph_library/constant.js"></script>
 <script src="js/graph_library/properties.js"></script>
