Xóa các file không cần thiết + đổi tên hiển thị

--- a/graphs.html
+++ b/graphs.html
@@ -31,7 +31,7 @@
 <body>
   <div id="top-bar">
     <!-- <a href=""><span class="colour" style="border: 1px solid green; border-radius: 25px;">7</span></a>&nbsp;&nbsp;&nbsp; -->
-    <a id="home" href="">Visu<span class="colour">Algo</span><span style="font-size: 40%">.net</span></a>
+    <a id="home" href="">Neural<span class="colour">Network</span>Brain</a>
     <span id="title">
       <a id='menu1' class='selected-viz'>Có trọng số/ Không trọng số</a>
       <a id='menu2'>U/W</a>
