--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <body>
 
 <div id="top-bar">
-	<a id="home" href="">heo<span class="colour">con</span>om<span class="colour">trai</span>dua<span class="colour">du</span>cay<span class="colour">dua</span>an<span class="colour">mi</span>goi</a>
+	<a id="home" href="">Neural<span class="colour">Network</span>Brain</a>
     
 </div>
 
-<h1>heo<span class="colour">con</span>om<span class="colour">trai</span>dua<span class="colour">du</span>cay<span class="colour">dua</span>an<span class="colour">mi</span>goi</h1>
+<h1>Neural<span class="colour">Network</span>Brain</h1>
 <h2>mô phỏng cấu trúc dữ liệu và thuật toán</h2>
 <form id="searchbar">
     <input id="search" type="text" autocomplete="off" value="Tìm kiếm..."
