--- a/mst.html
+++ b/mst.html
@@ -30,7 +30,7 @@
 <body>
 
 <div id="top-bar">
-  <a id="home" href="index.html">we<span class="colour">need</span>a<span class="colour">name</span></a>
+  <a id="home" href="index.html">Neural<span class="colour">Network</span>Brain</a>
     <span id="title">
       <a class="selected-viz">Minimum Spanning Tree</a>
     </span>
