--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img class="static" src="img/sssp.jpg">
             </a>
             <div class="info">
-                <h3><a href="sssp.html">Đường đi ngắn nhất</a></h3>
+                <h3><a href="Graph/vi/sssp.html">Đường đi ngắn nhất</a></h3>
                 <div class="indv-viz-filters"></div>
             </div>
         </div>
