--- a/Graph/vi/sssp.html
+++ b/Graph/vi/sssp.html
@@ -109,6 +109,7 @@
 </div>
 </div>
 </div>
+<p><textarea id="myTextarea" style="padding: 80px; margin-left: 1000px;">Nhập ma trận ở đây</textarea></p>
 <div id="dark-overlay"></div>
 <div id="status" class="panel"><p></p></div>
 <div id="status-hide" class="panel-hide"><img src="../img/arrow_white_right.png" alt=">" title="show/hide status panel" /></div>
@@ -512,6 +513,7 @@ Please <a href="https://visualgo.net/login"><u>login</u></a> if you are a repeat
 </div>
 <div id="actions" class="panel">
 <p id="draw" onclick="drawGraph()">Vẽ đồ thị</p>
+<p id="draw" onclick="example(matrixx)">Đọc ma trận</p>
 <p id="examples">Đồ thị ví dụ</p>
 <p id="bellmanford">Bellman Ford&#39;s(s)</p>
 <p id="bfs">BFS Algorithm(s)</p>
@@ -1991,9 +1993,7 @@ example(CP3_4_17);
         adjustPopupToImageSize();
       }
 
-      function URL(url.html) {
-        window.open(url, '_blank');
-      }
+      
 
       // Implement these functions in each visualisation
       // This function will be called before entering e-Lecture Mode
