--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </li>
     <li class="viz" id="sssp">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="sssp.html">
+            <a class="thumbnail" href="Graph/vi/sssp.html">
                 <img src="img/sssp.gif">
                 <img class="static" src="img/sssp.jpg">
             </a>
