Xóa bớt một số file

--- a/Graph/vi/graphs.html
+++ b/Graph/vi/graphs.html
@@ -15,17 +15,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
   <meta property="og:image" content="img/png/graphds.png">
   <title>VisuAlgo - Graph Data Structures (Adjacency Matrix, Adjacency List, Edge List)</title>
-  <link rel="icon" href="img/favicon.png" type="image/x-icon">
-  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-  <link rel="apple-touch-icon" href="img/favicon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon.png">
-  <link rel="stylesheet" type="text/css" href="fonts/silkscreen/stylesheet.css">
-  <link rel="stylesheet" type="text/css" href="css/common.css">
-  <link rel="stylesheet" href="css/viz.css">
-  <link rel="stylesheet" href="css/visual.css">
-  <link rel="stylesheet" href="css/drawgraph.css">
-  <link rel="stylesheet" href="css/graph.css">
+  <link rel="icon" href="../img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="../img/favicon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../img/favicon.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="../fonts/silkscreen/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="../css/common.css">
+  <link rel="stylesheet" href="../css/viz.css">
+  <link rel="stylesheet" href="../css/visual.css">
+  <link rel="stylesheet" href="../css/drawgraph.css">
+  <link rel="stylesheet" href="../css/graph.css">
 </head>
 
 <body>
@@ -166,9 +166,9 @@
     <p onClick="GraphVisu(false, false, 'CP3Fig4.26B');">D/W: CP3 Fig 4.26B*</p>
     <p onClick="GraphVisu(false, false, 'sssp');">D/W: Four 0&rarr;4 Paths</p>
   </div>
-  <div id="actions-hide" class="panel-hide"><img src="img/arrow_white_right.png" alt=">"
+  <div id="actions-hide" class="panel-hide"><img src="../img/arrow_white_right.png" alt=">"
       title="show/hide actions panel" /></div>
-  <script src="js/external/jquery-3.3.1.min.js"></script>
+  <script src="../js/external/jquery-3.3.1.min.js"></script>
   <script>
     // global
     var Adja_Matrix=[];
@@ -236,9 +236,9 @@
     });
   </script>
 
-  <script src="js/external/jquery-ui.min.js"></script>
-  <script src="js/external/d3.min.js"></script>
-  <script src="js/viz.js"></script>
+  <script src="../js/external/jquery-ui.min.js"></script>
+  <script src="../js/external/d3.min.js"></script>
+  <script src="../js/viz.js"></script>
   <script>
     // function toggleActionMenu() {
     //   $("#actions").toggle();
