--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h2>mô phỏng cấu trúc dữ liệu và thuật toán</h2>
 <form id="searchbar">
     <input id="search" type="text" autocomplete="off" value="Tìm kiếm..."
-    ><div id="show-filters" title="show/hide filters"><img src="img/arrow_white.png"/></div>
+    ><div id="show-filters" title="show/hide filters"><img src="Graph/img/arrow_white.png"/></div>
 </form>
 <div id="active-tags"></div>
 <div id="emptySearchMsg">Không tìm thấy kết quả.</div>
@@ -45,9 +45,9 @@
 <ul id="list">
     <li class="viz" id="graphs">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="graphs.html">
-            	<img src="img/graphds.gif">
-                <img class="static" src="img/graphds.jpg">
+            <a class="thumbnail" href="Graph/vi/graphs.html">
+            	<img src="Graph/img/graphds.gif">
+                <img class="static" src="Graph/img/graphds.jpg">
             </a>
             <div class="info">
                 <h3><a href="">Cấu trúc đồ thị</a></h3>
@@ -57,9 +57,9 @@
     </li>
     <li class="viz" id="mst">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="mst.html">
-                <img src="img/mst.gif">
-                <img class="static" src="img/mst.jpg">
+            <a class="thumbnail" href="Graph/vi/mst.html">
+                <img src="Graph/img/mst.gif">
+                <img class="static" src="Graph/img/mst.jpg">
             </a> 
             <div class="info">
                 <h3><a href="Graph/vi/mst.html">Cây khung nhỏ nhất</a></h3>
@@ -69,9 +69,9 @@
     </li>
     <li class="viz" id="sssp">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="sssp.html">
-                <img src="img/sssp.gif">
-                <img class="static" src="img/sssp.jpg">
+            <a class="thumbnail" href="Graph/vi/sssp.html">
+                <img src="Graph/img/sssp.gif">
+                <img class="static" src="Graph/img/sssp.jpg">
             </a>
             <div class="info">
                 <h3><a href="Graph/vi/sssp.html">Đường đi ngắn nhất</a></h3>
@@ -81,9 +81,9 @@
     </li>
     <li class="viz" id="dfsbfs"">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="Graph/vi/dfsbfs.html">
-                <img src="img/bfsdfs.gif">
-                <img class="static" src="img/bfsdfs.jpg">
+            <a class="thumbnail" href="Graphh/vi/dfsbfs.html">
+                <img src="Graph/img/bfsdfs.gif">
+                <img class="static" src="Graph/img/bfsdfs.jpg">
             </a>
             <div class="info">
                 <h3><a href="Graph/vi/dfsbfs.html">Duyệt đồ thị</a></h3>
