--- a/Graph/vi/dfsbfs.html
+++ b/Graph/vi/dfsbfs.html
@@ -473,7 +473,7 @@
               if (iEL[key]["u"] == v && iEL[key]["v"] == u) edgeHighlighted[key] = true;
             cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
               treeEdge, backEdge, crossEdge, forwardEdge);
-            cs["status"] = 'Try edge {u} → {v}'.replace("{u}", u).replace("{v}", v);
+            cs["status"] = 'Thử cạnh {u} → {v}'.replace("{u}", u).replace("{v}", v);
             cs["lineNo"] = 2;
             cs["el"][j]["animateHighlighted"] = true;
             stateList.push(cs);
@@ -490,7 +490,7 @@
                 treeEdge, backEdge, crossEdge, forwardEdge);
               cs["lineNo"] = [3];
               cs["status"] =
-                'Try edge {u} → {v}<br>Vertex {v} is unvisited, we have a <font color="red">tree edge</font>.'
+                'Thử cạnh {u} → {v}<br>Dỉnh {v} chưa được ghé thăm, chúng ta có <font color="red">tree edge</font>.'
                 .replace("{u}", u).replace("{v}", v).replace("{v}", v);
               stateList.push(cs);
 
@@ -501,7 +501,7 @@
               delete vertexHighlighted[v];
               cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
                 treeEdge, backEdge, crossEdge, forwardEdge);
-              cs["status"] = 'Finish DFS({v}), backtrack to DFS({u}).'.replace("{u}", u).replace("{v}", v);
+              cs["status"] = 'Kết thúc DFS({v}), quay lui DFS({u}).'.replace("{u}", u).replace("{v}", v);
               cs["lineNo"] = 1;
               stateList.push(cs);
             } else if (num[v] == EXPLORED) {
@@ -512,12 +512,12 @@
               }
               cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
                 treeEdge, backEdge, crossEdge, forwardEdge);
-              var thisStatus = 'Try edge {u} → {v}<br>Vertex {v} is explored, we have a '.replace("{u}", u).replace(
+              var thisStatus = 'Thử cạnh {u} → {v}<br>Đỉnh {v} đã tới, chứng ta có một '.replace("{u}", u).replace(
                 "{v}", v).replace("{v}", v);
               if (p[u] == v)
-                thisStatus = thisStatus + '<font color="blue">bidirectional edge</font> (a trivial cycle).';
+                thisStatus = thisStatus + '<font color="blue">cạnh hai chiều</font> (a trivial cycle).';
               else
-                thisStatus = thisStatus + '<font color="blue">back edge</font> (a true cycle).';
+                thisStatus = thisStatus + '<font color="blue">trở lại cạnh</font> (a true cycle).';
               cs["status"] = thisStatus;
               cs["lineNo"] = 4;
               stateList.push(cs);
@@ -528,7 +528,7 @@
               cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
                 treeEdge, backEdge, crossEdge, forwardEdge);
               cs["status"] =
-                'Try edge {u} → {v}<br>Vertex {v} is visited, we have a <font color="grey">forward/cross edge</font>.'
+                'Thử cạnh {u} → {v}<br>Đỉnh {v} đã tới, chúng ta có một <font color="grey">forward/cross edge</font>.'
                 .replace("{u}", u).replace("{v}", v).replace("{v}", v);
               cs["lineNo"] = 5;
               stateList.push(cs);
@@ -543,7 +543,7 @@
         cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing, treeEdge,
           backEdge, crossEdge, forwardEdge);
         cs["status"] =
-          'DFS({sourceVertex}) is completed. <font color="red">Red</font>/<font color="grey">grey</font>/<font color="blue">blue</font> edge is <font color="red">tree</font>/<font color="grey">cross/forward</font>/<font color="blue">back</font> edge of the DFS spanning tree, respectively.'
+          'DFS({sourceVertex}) đã hoàn thành. Cạnh <font color="red">đỏ</font>/<font color="grey">xám</font>/<font color="blue">xanh</font> là <font color="red">tree</font>/<font color="grey">cross/forward</font>/<font color="blue">back</font> edge của cây khung DFS, tương ứng.'
           .replace("{sourceVertex}", sourceVertex);
         cs["lineNo"] = 0;
         stateList.push(cs);
@@ -587,13 +587,13 @@
         for (var key in iVL) iVL[key]["extratext"] = "";
         iVL[sourceVertex]["extratext"] = "source";
 
-        var q = []; //, EdgeProcessed = 0;
+        var q = []; //, EdgeProcessed = 0; 
         q.push(sourceVertex);
         p[sourceVertex] = -2;
         vertexHighlighted[sourceVertex] = true;
         cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing, treeEdge,
           backEdge, crossEdge, forwardEdge);
-        cs["status"] = 'Start from source s = {sourceVertex}.<br>Set Q = {{sourceVertex}}.'.replace(
+        cs["status"] = 'Bắt đầu từ đỉnh s = {sourceVertex}.<br>Thiết lập Q = {{sourceVertex}}.'.replace(
           "{sourceVertex}", sourceVertex).replace("{sourceVertex}", sourceVertex); // d[" + sourceVertex + "] = 0, 
         cs["lineNo"] = 1;
         stateList.push(cs);
@@ -604,7 +604,7 @@
           vertexHighlighted[q[0]] = true;
           cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
             treeEdge, backEdge, crossEdge, forwardEdge);
-          cs["status"] = 'The queue is now {{queue}}.<br>Exploring neighbors of vertex u = {Lis}.'.replace(
+          cs["status"] = 'Hàng đợi hiện tại {{queue}}.<br>Duyệt đỉnh kề u = {Lis}.'.replace(
             "{queue}", q).replace("{Lis}", q[0]);
           cs["lineNo"] = [2, 3];
           stateList.push(cs);
@@ -633,7 +633,7 @@
                 if (iEL[key]["u"] == v && iEL[key]["v"] == u) edgeHighlighted[key] = true;
               cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
                 treeEdge, backEdge, crossEdge, forwardEdge);
-              cs["status"] = 'Try edge {u} → {v}'.replace("{u}", u).replace("{v}", v).replace("{v}", v);
+              cs["status"] = 'Thử cạnh {u} → {v}'.replace("{u}", u).replace("{v}", v).replace("{v}", v);
               cs["lineNo"] = 3;
               cs["el"][j]["animateHighlighted"] = true;
               stateList.push(cs);
@@ -650,7 +650,7 @@
                 cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
                   treeEdge, backEdge, crossEdge, forwardEdge);
                 cs["status"] =
-                  'Try edge {u} → {v}<br>Vertex {v} is unvisited, we have a <font color="red">tree edge</font>.'
+                  'Try edge {u} → {v}<br>Đỉnh {v} chưa tới, chúng ta có <font color="red">tree edge</font>.'
                   .replace("{u}", u).replace("{v}", v).replace("{v}", v);
                 cs["lineNo"] = 4;
               } else {
@@ -665,7 +665,7 @@
                 cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing,
                   treeEdge, backEdge, crossEdge, forwardEdge);
                 cs["status"] =
-                  'Try edge {u} → {v}<br>Vertex {v} is explored, we ignore this <font color="grey">non-tree edge</font>.'
+                  'Thử cạnh {u} → {v}<br>Đỉnh {v} đã được ghé thăm, chúng ta bỏ <font color="grey">non-tree edge</font> này.'
                   .replace("{u}", u).replace("{v}", v).replace("{v}", v);
                 cs["lineNo"] = 5;
               }
@@ -681,7 +681,7 @@
         cs = createState(iVL, iEL, vertexHighlighted, edgeHighlighted, vertexTraversed, vertexTraversing, treeEdge,
           backEdge, crossEdge, forwardEdge);
         cs["status"] =
-          'BFS({sourceVertex}) is completed. <font color="red">Red</font>/<font color="grey">grey</font> edge is <font color="red">tree</font>/<font color="grey">non-tree</font> edge of the BFS & SSSP spanning tree (for unweighted graph).'
+          'BFS({sourceVertex}) đã hoàn thành. Cạnh <font color="red">đỏ</font>/<font color="grey">xám</font> là <font color="red">tree</font>/<font color="grey">non-tree</font> edge của cây khung BFS và SSSP (for unweighted graph).'
           .replace("{sourceVertex}", sourceVertex);
         stateList.push(cs);
 
