Chỉnh sửa lại giao diện

--- a/Graph/vi/dfsbfs.html
+++ b/Graph/vi/dfsbfs.html
@@ -199,9 +199,7 @@
   </div>
   <div id="drawgraph" class="overlays"></div>
   <div id="bottom-bar">
-    <a id="trigger-about">Về</a>
-    <a id="trigger-team">Nhóm</a>
-    <a id="trigger-terms">Điều khoản sử dụng</a>
+    <a id="trigger-about"></a>
   </div>
 
   <script src="../js/jquery-3.3.1.min.js"></script>
