Xóa bỏ code dư thừa

--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
 </div>
 
 <div id="bottom-bar">
-	<a id="trigger-about">About</a>
-    <a id="trigger-team">Team</a>
-    <a id="trigger-terms">Terms of use</a>
+	<a id="trigger-about"></a>
 </div>
 
 <!-- Bottom bar and overlay popups -->
